--- a/style.css
+++ b/style.css
@@ -29,15 +29,16 @@ color: #74b9ff;
     border-radius: 5px;
     color: white;
     font-weight: 700;
+    transition: 0.5s ease-in-out;
 }
 .link-button-2{
     text-decoration: none;
     background-image: linear-gradient(#74b9ff,#0984e3);
     padding: 10px 40px;
-    border-radius: 5px;
     margin-left: 50px;
     color: white;
     font-weight: 700;
+    transition: 0.5s ease-in-out;
 }
 
 
